# countrygen

./: Cargo.toml  Dockerfile  README.md  fly.toml
src/: city.txt  main.rs  state.txt  usacity.txt
